--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run flake8 with CLI options
         run: |
           echo "Running flake8..."
-          flake8 calculator tests --count --max-line-length=88 --statistics
+          flake8 calculator --count --max-line-length=88 --statistics
 
       - name: Run black check
         run: |
